deploy/hub/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multicluster-operators-subscription
  namespace: multicluster-operators
  labels:
    name: multicluster-operators-subscription
spec:
  replicas: 1
  selector:
    matchLabels:
      name: multicluster-operators-subscription
  template:
    metadata:
      labels:
        name: multicluster-operators-subscription
    spec:
      serviceAccountName: multicluster-operators
      containers:
        - name: multicluster-operators-subscription
          image: quay.io/open-cluster-management/multicluster-operators-subscription:latest
          ports:
          - containerPort: 8443
          command:
          - /usr/local/bin/multicluster-operators-subscription
          - --sync-interval=60
          imagePullPolicy: Always
          resources:
              requests:
                cpu: 100m
                memory: 256Mi
              limits:
                cpu: 500m
                memory: 512Mi
