deploy/hub/placementrule-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multicluster-operators-placementrule
  namespace: open-cluster-management
  labels:
    name: multicluster-operators-placementrule
spec:
  replicas: 1
  selector:
    matchLabels:
      name: multicluster-operators-placementrule
  template:
    metadata:
      labels:
        name: multicluster-operators-placementrule
    spec:
      serviceAccountName: multicluster-operators
      containers:
        - name: multicluster-operators-placementrule
          image: quay.io/open-cluster-management/multicloud-operators-subscription:latest
          ports:
          - containerPort: 7443
          command:
          - /usr/local/bin/multicluster-operators-placementrule
          imagePullPolicy: Always
          resources:
              requests:
                cpu: 100m
                memory: 128Mi
