deploy/hub/subscription-report-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: multicluster-operators-subscription-report
  name: multicluster-operators-subscription-report
  namespace: open-cluster-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multicluster-operators-subscription-report
  template:
    metadata:
      labels:
        app: multicluster-operators-subscription-report
    spec:
      serviceAccountName: multicluster-operators
      containers:
      - command:
        - /usr/local/bin/appsubsummary
        image: quay.io/open-cluster-management/multicloud-operators-subscription:latest
        imagePullPolicy: IfNotPresent
        name: multicluster-operators-subscription-report
        resources:
          limits:
            cpu: 750m
            memory: 2Gi
          requests:
            cpu: 150m
            memory: 128Mi
