deploy/hub/metrics_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hub-subscription-metrics
  name: hub-subscription-metrics
  namespace: open-cluster-management
spec:
  ports:
    - name: metrics
      port: 8381
      protocol: TCP
      targetPort: 8381
  selector:
    app: multicluster-operators-hub-subscription
  sessionAffinity: None
  type: ClusterIP
